[workspace]

members = [
  "ast",
  "core",
  "backend",
  "cli",
  "dr-html-backend",
  "dr-html-wasm",
  "eval",
  "parser",
  "test-utils",
  "tck",
]

resolver = "2"

[workspace.lints.clippy]
# https://users.rust-lang.org/t/invalid-clippy-missing-const-for-fn/128550
missing-const-for-fn = "allow"
option-map-unit-fn = "allow"
if-same-then-else = "allow"
