[workspace]

members = [
  "ast",
  "core",
  "backend",
  "cli",
  "dr-html-backend",
  "html5s-backend",
  "dr-html-wasm",
  "eval",
  "parser",
  "test-utils",
  "tck",
]

resolver = "2"

[workspace.lints.clippy]
missing-const-for-fn = "warn"
option-map-unit-fn = "allow"
if-same-then-else = "allow"
