[workspace]

members = [
  "ast",
  "core",
  "backend",
  "backend-html5s",
  "cli",
  "dr-html-backend",
  "dr-html-server",
  "dr-html-wasm",
  "eval",
  "parser",
  "test-utils",
  "tck",
]

resolver = "2"

[workspace.lints.clippy]
missing-const-for-fn = "warn"
option-map-unit-fn = "allow"
if-same-then-else = "allow"
