[package]
name = "asciidork-ast"
version = "0.8.0"
edition = "2021"
description = "Asciidork AST nodes"
license = "MIT"

[dependencies]
bumpalo = { version = "3.15.4", features = ["collections"] }
asciidork-meta = { path = "../meta", version = "0.8.0" }
smallvec = "1.13.2"

[dev-dependencies]
jsonxf = "1.1.1"
pretty_assertions = "1.4.0"
serde_json = "1.0.115"
test-utils = { path = "../test-utils" }

[lints]
workspace = true

[lib]
doctest = false
