[package]
name = "asciidork-ast"
version = "0.22.0"
edition = "2021"
description = "Asciidork AST nodes"
license = "MIT"

[dependencies]
bumpalo = { version = "3.15.4", features = ["collections"] }
asciidork-core = { path = "../core", version = "0.22.0" }
smallvec = "1.13.2"

[dev-dependencies]
pretty_assertions = "1.4.0"
test-utils = { path = "../test-utils" }

[lints]
workspace = true

[lib]
doctest = false
