[package]
name = "asciidork-backend-asciidoctor-html"
version = "0.1.0"
edition = "2021"

[dependencies]
asciidork-ast = { path = "../ast" }
asciidork-backend = { path = "../backend" }
lazy_static = "1.4.0"
regex = "1.10.2"

[dev-dependencies]
asciidork-parser = { path = "../parser" }
asciidork-eval = { path = "../eval" }
test-utils = { path = "../test-utils" }
indoc = "2.0.4"
regex = { version = "1.10.2", features = ["std", "use_std"] }

[lib]
doctest = false
