[package]
name = "backend-asciidoctor"
version = "0.1.0"
edition = "2021"

[dependencies]
ast = { path = "../ast" }
lazy_static = "1.4.0"
regex = "1.10.2"

[dev-dependencies]
parser = { path = "../parser" }
test-utils = { path = "../test-utils" }
indoc = "2.0.4"
regex = { version = "1.10.2", features = ["std", "use_std"] }

[lib]
doctest = false
