[package]
name = "asciidork-backend-html5s"
version = "0.28.0"
edition = "2024"
description = "Asciidork Semantic HTML backend, based on jirutka/asciidoctor-html5s"
license = "MIT"

[dependencies]
asciidork-ast = { path = "../ast", version = "0.28.0" }
asciidork-backend = { path = "../backend", version = "0.28.0" }
asciidork-eval = { path = "../eval", version = "0.28.0" }
asciidork-core = { path = "../core", version = "0.28.0" }
lazy_static = "1.4.0"
regex = "1.10.2"
tracing = { version = "0.1", features = ["release_max_level_off"] }
tracing-subscriber = {version ="0.3", features = ["env-filter", "std"]}

[dev-dependencies]
asciidork-parser = { path = "../parser" }
asciidork-eval = { path = "../eval" }
test-utils = { path = "../test-utils" }
indoc = "2.0.4"
regex = { version = "1.10.2", features = ["std", "use_std"] }
pretty_assertions = "1.4.0"

[lib]
doctest = false

[lints]
workspace = true
