[package]
name = "asciidork-backend"
version = "0.25.0"
edition = "2021"
description = "Asciidork backend"
license = "MIT"

[dependencies]
asciidork-ast = { path = "../ast", version = "0.25.0" }
asciidork-core = { path = "../core", version = "0.23.0" }
roman_numerals_fn = "1.0.0"

[lints]
workspace = true
