[package]
name = "asciidork-backend"
version = "0.33.0"
edition = "2024"
description = "Asciidork backend"
license = "MIT"

[dependencies]
asciidork-ast = { path = "../ast", version = "0.33.0" }
asciidork-core = { path = "../core", version = "0.31.0" }
roman_numerals_fn = "1.0.0"
dateparser = "0.2"
lazy_static = "1.4.0"
regex = "1.10.2"

[lints]
workspace = true

[lib]
doctest = false
