[package]
name = "asciidork-cli"
version = "0.6.0"
edition = "2021"
description = "Asciidork CLI"
license = "MIT"

[[bin]]
name = "asciidork"
path = "src/main.rs"

[dependencies]
asciidork-eval = { path = "../eval", version = "0.6.0" }
asciidork-ast = { path = "../ast", version = "0.5.0" }
asciidork-meta = { path = "../meta", version = "0.5.0" }
asciidork-parser = { path = "../parser", version = "0.6.0" }
asciidork-dr-html-backend = { path = "../dr-html-backend", version = "0.6.0" }
colored = "2.0.4"
bumpalo = { version = "3.15.4", features = ["collections"] }
clap = { version = "4.5.4", features = ["derive"] }
minreq = { version = "2.12.0", features = ["https"] }

[lints]
workspace = true
