[package]
name = "asciidork-cli"
version = "0.22.0"
edition = "2021"
description = "Asciidork CLI"
license = "MIT"
default-run = "asciidork"

[[bin]]
name = "asciidork"
path = "src/main.rs"

[dependencies]
asciidork-eval = { path = "../eval", version = "0.22.0" }
asciidork-ast = { path = "../ast", version = "0.22.0" }
asciidork-core = { path = "../core", version = "0.22.0" }
asciidork-parser = { path = "../parser", version = "0.22.0" }
asciidork-dr-html-backend = { path = "../dr-html-backend", version = "0.22.0" }
colored = "2.0.4"
bumpalo = { version = "3.15.4", features = ["collections"] }
clap = { version = "4.5.4", features = ["derive"] }
lazy_static = "1.4.0"
regex = { version = "1.10.2", features = ["std", "use_std"] }
minreq = { version = "2.12.0", features = ["https"] }
dunce = "1.0.5"
miniserde = "0.1.42"

[dev-dependencies]
test-utils = { path = "../test-utils" }
indoc = "2.0.4"
pretty_assertions = "1.4.0"

[lints]
workspace = true
