[package]
name = "asciidork-server"
version = "0.34.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "REST API server for asciidork document conversion"
repository = "https://github.com/jaredh159/asciidork"

[[bin]]
name = "asciidork-server"
path = "src/main.rs"

[lib]
name = "asciidork_server"
path = "src/lib.rs"

[dependencies]
# Workspace dependencies
asciidork-ast = { path = "../ast", version = "0.34.0" }
asciidork-core = { path = "../core", version = "0.34.0" }
asciidork-parser = { path = "../parser", version = "0.34.0" }
asciidork-dr-html-backend = { path = "../dr-html-backend", version = "0.34.0" }
asciidork-backend-html5s = { path = "../backend-html5s", version = "0.34.0" }

# Web framework
axum = { version = "0.8", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "timeout", "trace", "limit"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Configuration
figment = { version = "0.10", features = ["env"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Memory allocator (same as CLI)
bumpalo = { version = "3.15.4", features = ["collections"] }

# Error handling
thiserror = "2"

# OpenAPI (optional)
utoipa = { version = "5", features = ["axum_extras"], optional = true }
utoipa-swagger-ui = { version = "9", features = ["axum"], optional = true }

[features]
default = []
openapi = ["utoipa", "utoipa-swagger-ui"]

[dev-dependencies]
reqwest = { version = "0.12", features = ["json"] }
tokio-test = "0.4"

[lints]
workspace = true
