[package]
name = "asciidork-eval"
version = "0.26.0"
edition = "2021"
description = "Asciidork eval"
license = "MIT"

[dependencies]
asciidork-ast = { path = "../ast", version = "0.26.0" }
asciidork-backend = { path = "../backend", version = "0.26.0" }

[lints]
workspace = true

[lib]
doctest = false

