[package]
name = "asciidork-eval"
version = "0.34.0"
edition = "2024"
description = "Asciidork eval"
license = "MIT"

[dependencies]
asciidork-ast = { path = "../ast", version = "0.34.0" }
asciidork-backend = { path = "../backend", version = "0.34.0" }

[lints]
workspace = true

[lib]
doctest = false

