[package]
name = "asciidork-parser"
version = "0.22.0"
edition = "2021"
description = "Asciidork parser"
license = "MIT"

[features]
attr_ref_observation = []

[dependencies]
asciidork-ast = { path = "../ast", version = "0.22.0" }
asciidork-core = { path = "../core", version = "0.22.0" }
bumpalo = { version = "3.15.4", features = ["collections"] }
jiff = "0.1.15"
lazy_static = "1.4.0"
regex = { version = "1.10.2", features = ["std", "use_std"] }
smallvec = "1.13.1"

[lib]
doctest = false

[dev-dependencies]
indoc = "2.0.4"
unindent = "0.2.3"
pretty_assertions = "1.4.0"
test-utils = { path = "../test-utils" }

[lints]
workspace = true
