[package]
name = "asciidork-tck"
version = "0.22.0"
edition = "2021"
description = "Asciidork TCK Adapter"
license = "MIT"

[[bin]]
name = "asciidork-tck"
path = "src/main.rs"

[lib]
name = "asciidork_tck"
path = "src/lib.rs"

[dependencies]
asciidork-ast = { path = "../ast", version = "0.22.0" }
asciidork-parser = { path = "../parser", version = "0.22.0" }
bumpalo = { version = "3.15.4", features = ["collections"] }
pretty_assertions = "1.4.0"
serde_json = "1.0.140"

[lints]
workspace = true
