[package]
name = "test-utils"
edition = "2021"

[dependencies]
asciidork-parser = { path = "../parser", version = "0.3.0" }
asciidork-ast = { path = "../ast", version = "0.3.0" }
lazy_static = "1.4.0"
regex = { version = "1.10.2", features = ["std", "use_std"] }
bumpalo = { version = "3.15.4", features = ["collections"] }

[dev-dependencies]
indoc = "2.0.4"

[lib]
doctest = false

[lints]
workspace = true
