[package]
name = "asciidork-parser-fuzzer"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = { version = "0.4", features = ["arbitrary-derive"] }
asciidork-parser = { path = "..", version = "0.20.0" }
asciidork-core = { path = "../../core", version = "0.20.0" }
bumpalo = { version = "3.15.4", features = ["collections"] }
arbitrary = { version = "1", optional = true, features = ["derive"] }

[[bin]]
name = "fuzz_target_1"
path = "fuzz_targets/fuzz_target_1.rs"
test = false
doc = false
bench = false

[workspace]
